<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nimbus_sans"
        android:lineHeight="34sp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/enterYourDetailsToGetStartedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nimbus_sans"
        android:lineHeight="20sp"
        android:text="@string/enter_your_email_and_we_will_send_you_a_link_to_reset_your_password"
        android:textAlignment="center"
        android:textColor="@color/gray_1"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/forgotPasswordTextView"
        app:layout_constraintStart_toStartOf="@id/forgotPasswordTextView"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nimbus_sans"
        android:lineHeight="20sp"
        android:text="@string/email_label"
        android:textColor="@color/gray_2"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintTop_toBottomOf="@id/enterYourDetailsToGetStartedTextView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="8dp"
        android:fontFamily="@font/nimbus_sans"
        android:hint="@string/enter_your_email_input_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="12dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendResetLinkButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button_black"
        android:text="@string/send_reset_link"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backToSignInTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:drawableStart="@drawable/ic_back"
        android:drawablePadding="8dp"
        android:focusable="true"
        android:fontFamily="@font/nimbus_sans"
        android:gravity="center_vertical"
        android:text="@string/back_to_sign_in"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/sendResetLinkButton"
        app:layout_constraintStart_toStartOf="@id/sendResetLinkButton"
        app:layout_constraintTop_toBottomOf="@id/sendResetLinkButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
